--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ but it's incomplete and may not be up-to-date. New documentation is worked on.</
 <p>All development happens on the <a href="https://github.com/redhat-performance/tuned">GitHub project page</a>.</p>
 <p>If you want to contribute, the best way is to create pull request through the GitHub.
 If you are not familiar with the GitHub, you can also send patches / ideas to:
-<a href="mailto://power-management@lists.fedoraproject.org">power-management AT lists.fedoraproject.org</a> or to
+<a href="mailto:power-management@lists.fedoraproject.org">power-management AT lists.fedoraproject.org</a> or to
 individual authors from the git log who worked on the last release.</p>
 
 <h1>License</h1>
