Slightly rewording one bullet point

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
         tunes system settings according to a selected profile
     </li>
     <li>
-        supports various types of configuration like sysctl, sysfs, kernel boot
-        command line parameters, and so on, integrated in a plug-in architecture
+        supports various types of configuration like sysctl, sysfs, 
+        or kernel boot command line parameters, which are integrated 
+        in a plug-in architecture
     </li>
     <li>
         supports hot plugging of devices and can be controlled from
