Added Tuned presentation from the DevConf 2019
Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
 <a href="https://docs-old.fedoraproject.org/en-US/Fedora/20/html/Power_Management_Guide/tuned.html">Fedora Power Management Guide</a>,
 but it is incomplete and may not be up-to-date. New documentation is being worked on.</p>
 
+<p>Some useful information can be also found in the <a href="tuned_devconf_2019.pdf">Tuned presentation</a> given during the DevConf 2019 in Brno.</p>
+
 <h1>Download</h1>
 <p>Releases are available for download from the
 <a href="https://github.com/redhat-performance/tuned/releases">GitHub releases page</a>.</p>
