--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
 <h1>Documentation</h1>
 <p>Some documentation is available in the
 <a href="https://docs-old.fedoraproject.org/en-US/Fedora/20/html/Power_Management_Guide/tuned.html">Fedora Power Management Guide</a>,
-but it is incomplete and may not be up-to-date. New documentation is being worked on.</p>
+but it is incomplete and may not be up-to-date. New <a href="https://github.com/redhat-performance/tuned/tree/master/doc/guide/">documentation
+is being worked on. It's packaged into the tarball.</p>
 
 <p>Some useful information can be also found in the <a href="tuned_devconf_2019.pdf">Tuned presentation</a> given during the DevConf 2019 in Brno.</p>
 
