Fixed DevConf presentation URL
Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
 but it is incomplete and may not be up-to-date. New <a href="https://github.com/redhat-performance/tuned/tree/master/doc/guide/">documentation</a>
 is being worked on. It's packaged into the tarball.</p>
 
-<p>Some useful information can be also found in the <a href="tuned_devconf_2019.pdf">Tuned presentation</a> given during the DevConf 2019 in Brno.</p>
+<p>Some useful information can be also found in the
+<a href="docs/tuned_devconf_2019.pdf">Tuned presentation</a> given during the DevConf 2019 in Brno.</p>
 
 <h1>Download</h1>
 <p>Releases are available for download from the
