Fixed download link to work in chrome
Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div id="header-container">
-    <map id="download">
+    <map name="download">
       <area shape="rect" coords="754,90,1032,149" href="https://github.com/redhat-performance/tuned/releases" alt="Download" />
     </map>
     <img alt="Tuned header" src="header1.png" usemap="#download" />
