--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ individual authors from the git log who worked on the last release.</p>
 <h1>License</h1>
 <p>TuneD is distributed under the GNU General Public License version 2 or later:
 <a href="https://www.gnu.org/licenses/old-licenses/gpl-2.0.html">https://www.gnu.org/licenses/old-licenses/gpl-2.0.html</a>.</p>
-<p><img alt="Red Hat logo" src="RedHat_logo_110x70.png" /></p>
+<p><img id="rh-logo" alt="Red Hat logo" src="Logo-Red_Hat.png" /></p>
 
 </body>
 </html>
