--- a/index.html
+++ b/index.html
@@ -82,10 +82,7 @@
 </ul>
 
 <h1>Documentation</h1>
-<p>Some documentation is available in the
-<a href="https://docs-old.fedoraproject.org/en-US/Fedora/20/html/Power_Management_Guide/tuned.html">Fedora Power Management Guide</a>,
-but it is incomplete and may not be up-to-date. New <a href="https://github.com/redhat-performance/tuned/tree/master/doc/manual/">documentation</a>
-is being worked on.</p>
+<p>The main documentation of TuneD is available <a href="docs/manual.html">here</a>.</p>
 
 <p>Some useful information can be also found in the
 <a href="docs/tuned_devconf_2019.pdf">TuneD presentation</a> given during the DevConf 2019 in Brno.</p>
